--- a/views/posts.html
+++ b/views/posts.html
@@ -8,7 +8,7 @@
       <div class='post'>
         <h2><a href='/posts/{{_id}}'>{{title}}</a></h2>
         <p>
-          {{body}}
+          {{{body}}}
         </p>
       </div>
     </li>
