--- a/views/posts.html
+++ b/views/posts.html
@@ -6,7 +6,7 @@
   {{#posts}}
     <li>
       <div class='post'>
-        <h2><a href='/posts/{{_id}}'>{{title}}</a></h2>
+        <h2><a href='/posts/{{_id}}'>{{title}}</a></h2> <h4><a href='/posts/{{_id}}/edit'>Edit</a></h4>
         <p>
           {{{body}}}
         </p>
