--- a/views/edit-post.html
+++ b/views/edit-post.html
@@ -1,4 +1,4 @@
-<form method='post' action='/posts'>
+<form method='post' action='{{apiRoot}}/posts'>
   <fieldset>
     <legend>Edit Post</legend>
 
