--- a/views/posts.html
+++ b/views/posts.html
@@ -1,12 +1,12 @@
 <h2>Posts</h2>
 
-<a href='/posts/new'>New Post</a>
+<a href='{{apiRoot}}/posts/new'>New Post</a>
 
 <ul>
   {{#posts}}
     <li>
       <div class='post'>
-        <h2><a href='/posts/{{_id}}'>{{title}}</a></h2> <h4><a href='/posts/{{_id}}/edit'>Edit</a></h4>
+        <h2><a href='{{apiRoot}}/posts/{{_id}}'>{{title}}</a></h2> <h4><a href='{{apiRoot}}/posts/{{_id}}/edit'>Edit</a></h4>
         <p>
           {{{body}}}
         </p>
