--- a/views/post.html
+++ b/views/post.html
@@ -1,4 +1,4 @@
-<a href='{{apiRoot}}/posts'>Home</a>
+<a href='{{apiRoot}}/posts' class='home-anchor'>Home</a>
 
 <h1>{{title}}</h1>
 
@@ -8,39 +8,39 @@
 
 <div>
   <h2>Files</h2>
-  <ul id='files'>
+  <ul id='files' class="list-group">
     {{#files}}
-      <li>
-        <div>
-          <a href="{{apiRoot}}/posts/{{_id}}/files/{{name}}">{{name}}</a>
-          <a href="{{apiRoot}}/posts/{{_id}}/files/{{name}}/delete">Delete</a>
-          <a href="{{apiRoot}}/posts/{{_id}}/files/{{name}}/credentials/{{credentials}}">{{option}}</a>
+    <li class="list-group-item">
+      <div class='row'>
+        <h5 class="col-xs-6 col-md-4">
+            <a href="{{apiRoot}}/posts/{{_id}}/files/{{name}}">{{name}}</a>
+          </h5>
+        <div class="col-xs-6 col-md-8 text-right">
+          <a href="{{apiRoot}}/posts/{{_id}}/files/{{name}}/credentials/{{credentials}}" class='glyphicon glyphicon-pencil btn-primary btn-xs edit-button'>{{option}}</a>
+          <a href="{{apiRoot}}/posts/{{_id}}/files/{{name}}/delete" class='glyphicon glyphicon-trash btn-danger btn-xs delete-button'>Delete</a>
         </div>
-      </li>
-    {{/files}}
-
-    {{^files}}
-      No Files Yet
-    {{/files}}
+      </div>
+    </li>
+    {{/files}} {{^files}} No Files Yet {{/files}}
   </ul>
 </div>
 
-<form method='post'  enctype="multipart/form-data" action='{{apiRoot}}/posts/{{_id}}/files'>
+<form method='post' class='file-form' enctype="multipart/form-data" action='{{apiRoot}}/posts/{{_id}}/files'>
   <fieldset>
     <legend>Leave a file</legend>
 
 
     <div>
       <label for='file'>Your File</label>
-      <input name='file' type="file"/>
+      <input name='file' class="form-control file-input" type="file" />
     </div>
     <div>
       <label for='isPrivate'>Private</label>
-      <input name='isPrivate' type="checkbox"/>
+      <input name='isPrivate' class="form-control isPrivate-input" type="checkbox" />
     </div>
 
     <div class='buttons'>
-      <input type='submit' value='Upload file' />
+      <input type='submit' class='form-control btn btn-default upload-button' value='Upload file' />
     </div>
   </fieldset>
 </form>
